--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Azure login
-      uses: az login
+    - name: Set up Azure CLI
+      uses: azure/login@v1
       with:
-        az login --service-principal -u ${{ secrets.ARM_CLIENT_ID }} -p ${{ secrets.ARM_CLIENT_SECRET }} --tenant ${{ secrets.ARM_TENANT_ID }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Start AKS Cluster
       run: |
