--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Login to Azure Container Registry
       run: az acr login --name demolearnacr
     - name: build image
-      run: docker build -t demolearnacr.azurecr.io/product_list_app:${{ github.sha }} .
+      run: docker build -t demolearnacr.azurecr.io/demo_dev/product_list_app:${{ github.sha }} .
       working-directory: ./myapp
     - name : push image to acr
-      run: docker push demolearnacr.azurecr.io/product_list_app:${{ github.sha }}
+      run: docker push demolearnacr.azurecr.io/demo_dev/product_list_app:${{ github.sha }}
