--- a/manifest/manifestfile.yml
+++ b/manifest/manifestfile.yml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: demolearnacr.azurecr.io/demo_dev/product_list_app:$tag
-          imagePullPolicy: IfNotPresent
+          image: demolearnacr.azurecr.io/demo_dev/product_list_app:
+          imagePullPolicy: Always
           ports:
             - containerPort: 5070
       imagePullSecrets:
