--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Update values.yaml
       uses: fjogeleit/yaml-update-action@main
       with:
-        valueFile: 'manifest/deployment.yaml'
+        valueFile: 'manifest/deployment.yml'
         propertyPath: 'spec.template.container.image'
         value: demolearnacr.azurecr.io/demo_dev/product-list-app:${{ github.sha }}
         commitChange: true
