--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,10 +37,9 @@ jobs:
       uses: fjogeleit/yaml-update-action@main
       with:
         valueFile: 'manifest/deployment.yml'
-        propertyPath: 'spec.template.container.image'
+        propertyPath: 'spec.template.containers.image'
         value: demolearnacr.azurecr.io/demo_dev/product-list-app:${{ github.sha }}
-        token: ${{ secrets.ACCESS_TOKEN }}
-        updateFile: true
+        token: ${{ secrets.ACCESS_TOKEN }}        
         commitChange: true
         createPR: false
         branch: main
