--- a/manifest/deployment.yml
+++ b/manifest/deployment.yml
@@ -12,7 +12,7 @@ spec:
   template:
     metadata:
       labels:
-        app: my-app
+        app: my-appa
     spec:
       containers:
         - name: myapp
